test_resources/lit_class/errors/test10.yr
@abstract
class Error over Exception {
    pub self () {}
}

class ErrorB over Exception {
    pub self () {}
}

trait A {
    pub fn foo (self)
        throws Error
        ;
}

class B {
    pub self () {}

    impl A {
        pub over foo (self)
            throws ErrorB
        {
            throw copy ErrorB ();
        }
    }
}
